--- a/exercicioTS.2/package.json
+++ b/exercicioTS.2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exerciciotypescript8",
+  "name": "exerciciots.2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
